--- a/PJPathGenerator/src/index.html
+++ b/PJPathGenerator/src/index.html
@@ -9,7 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
   
+  <div id= "PjChar">
+          <tb-Caracteristicas>{{tabla}}</tb-Caracteristicas>
+  </div> 
 </body>
 </html>
