Carga desde json completada

--- a/PJPathGenerator/src/index.html
+++ b/PJPathGenerator/src/index.html
@@ -9,9 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  
-  <div id= "PjChar">
-          <tb-Caracteristicas>{{tabla}}</tb-Caracteristicas>
-  </div> 
+    <app-root>loading...</app-root>    
+    <app-tb-caracteristicas>loading...</app-tb-caracteristicas>
 </body>
 </html>
